login page gaps fix

--- a/sass/styles/elements/elements.form-input.scss
+++ b/sass/styles/elements/elements.form-input.scss
@@ -12,6 +12,7 @@
 
   input{
     padding-right: 95px;
+    width: 75%;
   }
 
   button{
