--- a/sass/styles/media-query/media.form-input.scss
+++ b/sass/styles/media-query/media.form-input.scss
@@ -6,6 +6,7 @@
 
     &.icon{
       padding-left: 40px;
+      width: 80%;
       background-size: 20px;
       background-position-x: 10px;
     }
